; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/jscript/extr_function.c_set_constructor_prop.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/jscript/extr_function.c_set_constructor_prop.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@set_constructor_prop.constructorW = internal constant [12 x i8] c"constructor\00", align 1
@PROPF_WRITABLE = common dso_local global i32 0, align 4
@PROPF_CONFIGURABLE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32*, i32*)* @set_constructor_prop to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @set_constructor_prop(i32* %0, i32* %1, i32* %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  store i32* %0, i32** %4, align 8
  store i32* %1, i32** %5, align 8
  store i32* %2, i32** %6, align 8
  %7 = load i32*, i32** %6, align 8
  %8 = load i32, i32* @PROPF_WRITABLE, align 4
  %9 = load i32, i32* @PROPF_CONFIGURABLE, align 4
  %10 = or i32 %8, %9
  %11 = load i32*, i32** %5, align 8
  %12 = call i32 @jsval_obj(i32* %11)
  %13 = call i32 @jsdisp_define_data_property(i32* %7, i8* getelementptr inbounds ([12 x i8], [12 x i8]* @set_constructor_prop.constructorW, i64 0, i64 0), i32 %10, i32 %12)
  ret i32 %13
}

declare dso_local i32 @jsdisp_define_data_property(i32*, i8*, i32, i32) #1

declare dso_local i32 @jsval_obj(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
